fix: failing to parse <null> values in meta code observations