@@ -53,15 +53,13 @@ import org.springframework.stereotype.Service;
 public class MiiLabReportMapper implements
     ValueMapper<LaboratoryReport, MappingContainer<LaboratoryReport, Bundle>> {
 
-    public static final Set<String> metaCodes = EnumSet.allOf(MetaCode.class).stream().map(
-        Enum::toString).collect(
-        Collectors.toSet());
+    public static final Set<String> metaCodes = EnumSet.allOf(MetaCode.class).stream()
+        .map(Enum::toString).collect(Collectors.toSet());
     private final static Logger log = LoggerFactory.getLogger(MiiLabReportMapper.class);
     private final IParser fhirParser;
     private final FhirProperties fhirProperties;
     private final Function<String, String> hasher = i -> Hashing.sha256()
-        .hashString(i, StandardCharsets.UTF_8)
-        .toString();
+        .hashString(i, StandardCharsets.UTF_8).toString();
     private final Identifier identifierAssigner;
     private final LoincMapper loincMapper;
 
@@ -71,28 +69,22 @@ public class MiiLabReportMapper implements
         this.loincMapper = loincMapper;
         this.fhirProperties = fhirProperties;
         fhirParser = fhirContext.newJsonParser();
-        identifierAssigner = new Identifier().setSystem(fhirProperties.getSystems()
-                .getAssignerId())
-            .setValue(fhirProperties.getSystems()
-                .getAssignerCode());
+        identifierAssigner = new Identifier().setSystem(fhirProperties.getSystems().getAssignerId())
+            .setValue(fhirProperties.getSystems().getAssignerCode());
     }
 
     private <T extends Resource> T createWithId(Class<T> resourceType, String id)
         throws NoSuchMethodException, IllegalAccessException, InvocationTargetException, InstantiationException {
-        var resource = resourceType.getConstructor()
-            .newInstance();
+        var resource = resourceType.getConstructor().newInstance();
         resource.setId(resourceType.getSimpleName() + "/" + id);
 
         return resource;
     }
 
     private <T extends DomainResource> void setNarrative(T resource) {
-        var narrative = fhirParser.setPrettyPrint(true)
-            .encodeResourceToString(resource);
-        resource.getText()
-            .setStatus(NarrativeStatus.GENERATED);
-        resource.getText()
-            .setDivAsString(narrative);
+        var narrative = fhirParser.setPrettyPrint(true).encodeResourceToString(resource);
+        resource.getText().setStatus(NarrativeStatus.GENERATED);
+        resource.getText().setDivAsString(narrative);
     }
 
     @Override
@@ -115,20 +107,17 @@ public class MiiLabReportMapper implements
             var mappedReport = mapDiagnosticReport(report.getResource(), bundle)
 
                 // observations
-                .setResult((report.getObservations()
-                    .stream()
+                .setResult((report.getObservations().stream()
                     // map observations
                     .map(this::mapObservation)
-                    .map(o -> mapLoincUcum(o, mappingContainer.getSource()
-                        .getMetaCode()))
+                    .map(o -> mapLoincUcum(o, mappingContainer.getSource().getMetaCode()))
                     .filter(Objects::nonNull)
                     // add to bundle
                     .peek(o -> addResourceToBundle(bundle, o))
                     // set result references
                     .map(Reference::new)).collect(Collectors.toList()));
 
-            if (mappedReport.getResult()
-                .isEmpty()) {
+            if (mappedReport.getResult().isEmpty()) {
                 // report contains no observations
                 log.info(
                     "No Observations after mapping for LaboratoryReport with id {} and order number {}. Discarding.",
@@ -158,37 +147,27 @@ public class MiiLabReportMapper implements
     }
 
     private MiiLabReportMapper processMetaResults(LaboratoryReport report) {
-        var metaObs = report.getObservations()
-            .stream()
-            .filter(x -> metaCodes.contains(x.getCode()
-                .getCoding()
-                .stream()
-                .findFirst()
-                .orElse(new Coding())
-                .getCode()))
+        var metaObs = report.getObservations().stream().filter(x -> metaCodes.contains(
+                x.getCode().getCoding().stream().findFirst().orElse(new Coding()).getCode()))
             .collect(Collectors.toList());
 
         if (!metaObs.isEmpty()) {
             // only one meta code currently supported
             var firstMetaObs = metaObs.get(0);
-            report.setMetaCode(metaObs.get(0)
-                .getValueStringType().getValue());
+            if (firstMetaObs.hasValueStringType()) {
+                report.setMetaCode(firstMetaObs.getValueStringType().getValue());
+            }
 
             // remove from DiagnosticReport
-            report.getResource()
-                .getResult()
-                .removeIf(x -> Objects.equals(x.getResource(), firstMetaObs));
+            report.getObservations().removeIf(x -> Objects.equals(x, firstMetaObs));
         }
 
         return this;
     }
 
     private void generateNarratives(Bundle bundle) {
-        bundle.getEntry()
-            .stream()
-            .map(BundleEntryComponent::getResource)
-            .filter(DomainResource.class::isInstance)
-            .map(DomainResource.class::cast)
+        bundle.getEntry().stream().map(BundleEntryComponent::getResource)
+            .filter(DomainResource.class::isInstance).map(DomainResource.class::cast)
             .forEach(this::setNarrative);
     }
 
@@ -207,8 +186,7 @@ public class MiiLabReportMapper implements
         var identifierType = new CodeableConcept().addCoding(
             new Coding().setSystem("http://terminology.hl7.org/CodeSystem/v2-0203")
                 .setCode("FILL"));
-        var identifierValue = labReport.getIdentifierFirstRep()
-            .getValue();
+        var identifierValue = labReport.getIdentifierFirstRep().getValue();
 
         var report = new DiagnosticReport();
         // id
@@ -220,29 +198,25 @@ public class MiiLabReportMapper implements
 
         // identifier
         report.setIdentifier(List.of(new Identifier().setType(identifierType)
-                .setSystem(fhirProperties.getSystems()
-                    .getDiagnosticReportId())
+                .setSystem(fhirProperties.getSystems().getDiagnosticReportId())
                 .setValue(identifierValue)
                 .setAssigner(new Reference().setIdentifier(getIdentifierAssigner()))))
 
             // basedOn
-            .setBasedOn(List.of(new Reference("ServiceRequest/" + createId(
-                fhirProperties.getSystems()
-                    .getServiceRequestId(), identifierValue,
-                labReport.getEffectiveDateTimeType()))))
+            .setBasedOn(List.of(new Reference(
+                "ServiceRequest/" + createId(fhirProperties.getSystems().getServiceRequestId(),
+                    identifierValue, labReport.getEffectiveDateTimeType()))))
 
             // status
             .setStatus(labReport.getStatus())
 
             // category
             .setCategory(List.of(new CodeableConcept().addCoding(
-                    new Coding().setSystem("http://loinc.org")
-                        .setCode("26436-6"))
-                .addCoding(new Coding().setSystem("http://terminology.hl7.org/CodeSystem/v2-0074")
-                    .setCode("LAB"))
+                    new Coding().setSystem("http://loinc.org").setCode("26436-6")).addCoding(
+                    new Coding().setSystem("http://terminology.hl7.org/CodeSystem/v2-0074")
+                        .setCode("LAB"))
                 // with local category
-                .addCoding(labReport.getCategoryFirstRep()
-                    .getCodingFirstRep())))
+                .addCoding(labReport.getCategoryFirstRep().getCodingFirstRep())))
 
             // code
             .setCode(labReport.getCode())
@@ -264,8 +238,7 @@ public class MiiLabReportMapper implements
 
     private Observation mapObservation(Observation source) {
         var identifierType = new CodeableConcept().addCoding(
-            new Coding().setSystem("http://terminology.hl7.org/CodeSystem/v2-0203")
-                .setCode("OBI"));
+            new Coding().setSystem("http://terminology.hl7.org/CodeSystem/v2-0203").setCode("OBI"));
         var identifierValue = createId(source.getIdentifierFirstRep(),
             source.getEffectiveDateTimeType());
 
@@ -279,47 +252,34 @@ public class MiiLabReportMapper implements
 
         // identifier
         obs.setIdentifier(List.of(new Identifier().setType(identifierType)
-                .setSystem(fhirProperties.getSystems()
-                    .getObservationId())
-                .setValue(identifierValue)
+                .setSystem(fhirProperties.getSystems().getObservationId()).setValue(identifierValue)
                 .setAssigner(new Reference().setIdentifier(getIdentifierAssigner()))))
 
             // status
             .setStatus(source.getStatus())
             // category
             .setCategory(List.of(new CodeableConcept().addCoding(
-                    new Coding().setSystem("http://loinc.org")
-                        .setCode("26436-6"))
-                .addCoding(new Coding().setSystem(
-                        "http://terminology.hl7.org/CodeSystem/observation-category")
-                    .setCode("laboratory"))
+                    new Coding().setSystem("http://loinc.org").setCode("26436-6")).addCoding(
+                    new Coding().setSystem("http://terminology.hl7.org/CodeSystem/observation-category")
+                        .setCode("laboratory"))
                 // with local category
-                .addCoding(source.getCategoryFirstRep()
-                    .getCodingFirstRep())))
+                .addCoding(source.getCategoryFirstRep().getCodingFirstRep())))
 
             // local coding: set system
-            .setCode(new CodeableConcept().addCoding(source.getCode()
-                .getCodingFirstRep()
-                .setSystem(fhirProperties.getSystems()
-                    .getLaboratorySystem())))
-            .setEffective(source.getEffective())
-            .setValue(parseValue(source))
+            .setCode(new CodeableConcept().addCoding(source.getCode().getCodingFirstRep()
+                .setSystem(fhirProperties.getSystems().getLaboratorySystem())))
+            .setEffective(source.getEffective()).setValue(parseValue(source))
             // interpretation
-            .setInterpretation(source.getInterpretation()
-                .stream()
-                .map(cc -> new CodeableConcept().setCoding(
+            .setInterpretation(
+                source.getInterpretation().stream().map(cc -> new CodeableConcept().setCoding(
                     // set system on each coding
-                    cc.getCoding()
-                        .stream()
-                        .map(c -> c.setSystem(
+                    cc.getCoding().stream().map(c -> c.setSystem(
                             "http://terminology.hl7.org/CodeSystem/v3-ObservationInterpretation"))
-                        .collect(Collectors.toList())))
-                .collect(Collectors.toList()))
+                        .collect(Collectors.toList()))).collect(Collectors.toList()))
             // map reference range to simple quantity with value only
-            .setReferenceRange(source.getReferenceRange()
-                .stream()
-                .map(this::harmonizeRangeQuantities)
-                .collect(Collectors.toList()))
+            .setReferenceRange(
+                source.getReferenceRange().stream().map(this::harmonizeRangeQuantities)
+                    .collect(Collectors.toList()))
             // note
             .setNote(source.getNote());
 
@@ -340,13 +300,11 @@ public class MiiLabReportMapper implements
     private Type parseValue(Observation obs) {
         if (obs.hasValueStringType()) {
             // fix numeric value with comparator in "valueString"
-            var valueString = obs.getValueStringType()
-                .getValue();
+            var valueString = obs.getValueStringType().getValue();
 
             // check first character for comparator value
             var comp = valueString.charAt(0);
-            var valuePart = valueString.substring(1)
-                .trim();
+            var valuePart = valueString.substring(1).trim();
 
             if ((comp == '<' || comp == '>') && NumberUtils.isCreatable(valuePart)) {
                 return new Quantity(NumberUtils.createDouble(valuePart)).setComparator(
@@ -366,8 +324,8 @@ public class MiiLabReportMapper implements
     private void ensureCodeIsSet(Quantity quantity) {
         if (quantity.hasUnit() && !quantity.hasCode()) {
             // every code needs a system :)
-            quantity.setCode(quantity.getUnit()).setSystem(fhirProperties.getSystems()
-                .getLaboratoryUnitSystem());
+            quantity.setCode(quantity.getUnit())
+                .setSystem(fhirProperties.getSystems().getLaboratoryUnitSystem());
         }
     }
 
@@ -377,9 +335,8 @@ public class MiiLabReportMapper implements
         var identifierType = new CodeableConcept(
             new Coding().setSystem("http://terminology.hl7.org/CodeSystem/v2-0203")
                 .setCode("PLAC"));
-        var identifierValue = createId(fhirProperties.getSystems()
-            .getServiceRequestId(), report.getIdentifierFirstRep()
-            .getValue(), report.getEffectiveDateTimeType());
+        var identifierValue = createId(fhirProperties.getSystems().getServiceRequestId(),
+            report.getIdentifierFirstRep().getValue(), report.getEffectiveDateTimeType());
 
         var serviceRequest = new ServiceRequest();
         // id
@@ -389,11 +346,10 @@ public class MiiLabReportMapper implements
                 "https://www.medizininformatik-initiative.de/fhir/core/modul-labor/StructureDefinition/ServiceRequestLab")
             .setSource("#swisslab"));
 
-        serviceRequest.setIdentifier(List.of(new Identifier().setSystem(fhirProperties.getSystems()
-                    .getServiceRequestId())
-                .setType(identifierType)
-                .setValue(identifierValue)
-                .setAssigner(new Reference().setIdentifier(getIdentifierAssigner()))))
+        serviceRequest.setIdentifier(List.of(
+                new Identifier().setSystem(fhirProperties.getSystems().getServiceRequestId())
+                    .setType(identifierType).setValue(identifierValue)
+                    .setAssigner(new Reference().setIdentifier(getIdentifierAssigner()))))
 
             // authoredOn
             // uses report effective (date)
@@ -409,9 +365,8 @@ public class MiiLabReportMapper implements
                     .setCode("laboratory"))))
 
             // code
-            .setCode(new CodeableConcept().setCoding(List.of(
-                new Coding().setSystem("http://snomed.info/sct")
-                    .setCode("59615004"))));
+            .setCode(new CodeableConcept().setCoding(
+                List.of(new Coding().setSystem("http://snomed.info/sct").setCode("59615004"))));
 
         // add to bundle
         addResourceToBundle(bundle, serviceRequest);
@@ -423,64 +378,48 @@ public class MiiLabReportMapper implements
      * Set the encounter reference for {@link DiagnosticReport} and {@link Observation}
      */
     private void setEncounter(LaboratoryReport report, Bundle bundle) {
-        if (report.getResource()
-            .getEncounter()
-            .getResource() == null) {
+        if (report.getResource().getEncounter().getResource() == null) {
             throw new IllegalArgumentException(String.format(
                 "Missing referenced encounter resource in report '%s'. Reference is '%s'",
-                report.getId(), report.getResource()
-                    .getEncounter()
-                    .getReference()));
+                report.getId(), report.getResource().getEncounter().getReference()));
         }
 
-        var encounterId = ((Encounter) report.getResource()
-            .getEncounter()
-            .getResource()).getIdentifierFirstRep()
-            .getValue();
+        var encounterId = ((Encounter) report.getResource().getEncounter()
+            .getResource()).getIdentifierFirstRep().getValue();
 
-        getBundleEntryResources(bundle, ServiceRequest.class).forEach(r -> r.getEncounter()
-            .setReference("Encounter/" + encounterId));
-        getBundleEntryResources(bundle, DiagnosticReport.class).forEach(r -> r.getEncounter()
-            .setReference("Encounter/" + encounterId));
-        getBundleEntryResources(bundle, Observation.class).forEach(o -> o.getEncounter()
-            .setReference("Encounter/" + encounterId));
+        getBundleEntryResources(bundle, ServiceRequest.class).forEach(
+            r -> r.getEncounter().setReference("Encounter/" + encounterId));
+        getBundleEntryResources(bundle, DiagnosticReport.class).forEach(
+            r -> r.getEncounter().setReference("Encounter/" + encounterId));
+        getBundleEntryResources(bundle, Observation.class).forEach(
+            o -> o.getEncounter().setReference("Encounter/" + encounterId));
     }
 
     /**
      * Set the subject reference for {@link DiagnosticReport} and {@link Observation}
      */
     public void setPatient(LaboratoryReport report, Bundle bundle) {
-        if (report.getResource()
-            .getSubject()
-            .getResource() == null) {
+        if (report.getResource().getSubject().getResource() == null) {
             throw new IllegalArgumentException(String.format(
                 "Missing referenced patient resource in report '%s'. Reference is '%s'",
-                report.getId(), report.getResource()
-                    .getSubject()
-                    .getReference()));
+                report.getId(), report.getResource().getSubject().getReference()));
         }
 
-        var patientId = ((Patient) report.getResource()
-            .getSubject()
-            .getResource()).getIdentifierFirstRep()
-            .getValue();
+        var patientId = ((Patient) report.getResource().getSubject()
+            .getResource()).getIdentifierFirstRep().getValue();
 
-        getBundleEntryResources(bundle, ServiceRequest.class).forEach(r -> r.getSubject()
-            .setReference("Patient/" + patientId));
-        getBundleEntryResources(bundle, DiagnosticReport.class).forEach(r -> r.getSubject()
-            .setReference("Patient/" + patientId));
-        getBundleEntryResources(bundle, Observation.class).forEach(o -> o.getSubject()
-            .setReference("Patient/" + patientId));
+        getBundleEntryResources(bundle, ServiceRequest.class).forEach(
+            r -> r.getSubject().setReference("Patient/" + patientId));
+        getBundleEntryResources(bundle, DiagnosticReport.class).forEach(
+            r -> r.getSubject().setReference("Patient/" + patientId));
+        getBundleEntryResources(bundle, Observation.class).forEach(
+            o -> o.getSubject().setReference("Patient/" + patientId));
 
     }
 
     public <T> List<T> getBundleEntryResources(Bundle bundle, Class<T> domainType) {
-        return bundle.getEntry()
-            .stream()
-            .map(BundleEntryComponent::getResource)
-            .filter(domainType::isInstance)
-            .map(domainType::cast)
-            .collect(Collectors.toList());
+        return bundle.getEntry().stream().map(BundleEntryComponent::getResource)
+            .filter(domainType::isInstance).map(domainType::cast).collect(Collectors.toList());
     }
 
     private Identifier getIdentifierAssigner() {
@@ -497,15 +436,11 @@ public class MiiLabReportMapper implements
     }
 
     private void addResourceToBundle(Bundle bundle, DomainResource resource) {
-        var idElement = resource.getIdElement()
-            .getValue();
-        bundle.addEntry()
-            .setFullUrl(resource.getResourceType()
-                .name() + "/" + idElement)
-            .setResource(resource)
-            .setRequest(new BundleEntryRequestComponent().setMethod(HTTPVerb.PUT)
-                .setUrl(resource.getResourceType()
-                    .name() + "/" + idElement));
+        var idElement = resource.getIdElement().getValue();
+        bundle.addEntry().setFullUrl(resource.getResourceType().name() + "/" + idElement)
+            .setResource(resource).setRequest(
+                new BundleEntryRequestComponent().setMethod(HTTPVerb.PUT)
+                    .setUrl(resource.getResourceType().name() + "/" + idElement));
     }
 
 }
